fix: Tweak HeroBlock__image styling - right-alignment, responsiveness.

--- a/src/scss/HeroBlock.scss
+++ b/src/scss/HeroBlock.scss
@@ -7,8 +7,10 @@
 
 @media screen {
 	.HeroBlock {
-		padding: between_cols(0, 3 * $grid-unit);
+		padding: between_cols(0, 3 * $grid-unit) 0;
 		margin-bottom: between_cols(30, 100);
+		display: flex;
+		flex-flow: column nowrap;
 	}
 	.HeroBlock__title {
 		@include HeadingStyle--large();
@@ -18,6 +20,7 @@
 		display: block;
 		margin-top: grid-units(-1);
 		margin-bottom: grid-units(2);
+		order: 1;
 	}
 	.HeroBlock__summary {
 		@include BodyTextStyle--large();
@@ -28,6 +31,9 @@
 	.HeroBlock__summary [class],
 	.HeroBlock__summary blockquote {
 		@include WARNING__('Use simple markup only');
+	}
+
+	.HeroBlock__buttons {
 	}
 }
 
@@ -57,7 +63,9 @@
 	}
 	.HeroBlock--align--right > .HeroBlock__image {
 		padding-right: 0;
-		left: auto;
+		left: 0;
+		@include bodyPaddingInner(margin, true, left);
+		width: auto;
 		right: cols_pct(7, 7);
 	}
 
